--- a/RegistroPrestamo/RegistroPrestamo.csproj
+++ b/RegistroPrestamo/RegistroPrestamo.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="blazored.toast" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqLite" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
       <PrivateAssets>all</PrivateAssets>
